--- a/index.html
+++ b/index.html
@@ -153,27 +153,27 @@
         </div>
         <br />
         <svg width="40" height="40">
-          <use href="icons.svg#icon-html5"></use>
+          <use href="./images/icons.svg#icon-html5"></use>
         </svg>
         <svg width="40" height="40">
-          <use href="icons.svg#icon-css3"></use>
+          <use href="./images/icons.svg#icon-css3"></use>
         </svg>
         <svg width="40" height="40">
-          <use href="icons.svg#icon-sass"></use>
+          <use href="./images/icons.svg#icon-sass"></use>
         </svg>
         <svg width="40" height="40">
-          <use href="icons.svg#icon-github"></use>
+          <use href="./images/icons.svg#icon-github"></use>
         </svg>
         <svg width="40" height="40">
-          <use href="icons.svg#icon-vscode"></use>
+          <use href="./images/icons.svg#icon-vscode"></use>
         </svg>
         <svg width="40" height="40">
-          <use href="icons.svg#icon-git"></use>
+          <use href="./images/icons.svg#icon-git"></use>
         </svg>
       </div>
       <!--Sidebar-->
       <aside class="sidebar">
-        <img width="370" src="my.jpg" alt="foto" class="photo" />
+        <img width="370" src="./images/my.jpg" alt="foto" class="photo" />
         <!--Contacts-->
         <div class="contacts">
           <h3 class="sidebar_title">Contacts</h3>
@@ -316,4 +316,3 @@
     </div>
   </body>
 </html>
-
