--- a/index.html
+++ b/index.html
@@ -250,9 +250,6 @@
             <li class="languages_item">
               <span class="languages_text">Ukrainian: Native</span>
             </li>
-            <li class="languages_item">
-              <span class="languages_text">Russian: Native</span>
-            </li>
           </ul>
         </div>
         <!-- Hobbies and Interests -->
@@ -281,32 +278,32 @@
                 class="join-in-button"
               >
                 <svg class="join-in-link">
-                  <use href="icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="join-in-item">
               <a href="#" class="join-in-button">
                 <svg class="join-in-link">
-                  <use href="icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="join-in-item">
               <a
-                href="https://www.facebook.com/profile.php?id=100017101776192"
+                href="https://github.com/IvanTymoshchuk"
                 target="_blank"
                 class="join-in-button"
               >
                 <svg class="join-in-link">
-                  <use href="icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-github"></use>
                 </svg>
               </a>
             </li>
             <li class="join-in-item">
               <a href="#" class="join-in-button">
                 <svg class="join-in-link">
-                  <use href="icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
