--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <ol class="projects_list">
             <li class="projects_item">
               <span class="project"
-                ><a href="https://hellenglish.goit.global/" class="project_link"
+                ><a href="https://ice-eskimo.netlify.app/" class="project_link"
                   >https://ice-eskimo.netlify.app/</a
                 >
                 ......................
