--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
               </a>
             </li>
             <li class="join-in-item">
-              <a href="#" class="join-in-button">
+              <a href="https://www.linkedin.com/in/ivan-tymoshchuk-a00ab2262/" class="join-in-button">
                 <svg class="join-in-link">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
