--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
           <h1 class="about_name">Ivan Tymoshchuk</h1>
 
           <p class="about_description">
-            I’ve been actively studying the full stack for 1+ year. Quickly
-            learn new information, have good analytical skills, attentive to
-            details, work well on my own and in a team. Read much specialized
-            literature. I like to achieve perfection in everything I do.
+            I’ve been actively studying the full stack for 1+ year.I have a great desire to work in a team and make cool projects. To acquire and improve my skills.. I like to achieve perfection in everything I do.
           </p>
         </div>
 
