--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
                   >https://ice-eskimo.netlify.app/</a
                 >
                 ......................
-                <span class="project_bracket">[</span> HTML5, CSS3
+                <span class="project_bracket">[</span> HTML5, SASS, JavaScript
                 <span class="project_bracket">]</span>
               </span>
             </li>
             <li class="projects_item">
               <span class="project"
                 ><a href="https://cryptohub.goit.global/" class="project_link"
-                  >https://cryptohub.goit.global/</a
+                  >https://ivantymoshchuk.github.io/creative-scroll//</a
                 >
                 .......................
-                <span class="project_bracket">[</span> JavaScript
+                <span class="project_bracket">[</span> HTML5, JavaScript
                 <span class="project_bracket">]</span></span
               >
             </li>
